# godot-cpp-template

./: .asset-template.json.hb  .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  Run.cmd  SConstruct  SConsutil.py  THIRDPARTY.txt  TODO.md  build_profile.json  compose.yml  gdext.vcxproj  godot-cpp-example.sln  requirements.txt  sconsutil.py  vs.bat
.github/: ISSUE_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-godot-cpp/: action.yml
.github/actions/sign/: action.yml
.github/workflows/: builds.yml  ci.yml  make_build.yml
.sln/: README.md  demo.vcxproj  gdext.vcxproj  godot-cpp-example.sln  readme.md
.sln/targets/: JetBrains.Rider.Cpp.targets  nmake.substitution.props
addons/gdexample/: .gitignore  gdexample.gdextension
demo/: .gitignore  demo.csproj  example.gd  project.godot
demo/addons/gdexample/: gdexample.gdextension
demo/client/: .gitignore  export_presets.cfg  project.godot
demo/client/addons/gdkafka/: gdkafka.gdextension
demo/client/scenes/: Init.tscn
demo/client/scripts/: network_manager.gd
demo/server/rust-example/: Cargo.toml
doc_classes/: ExampleClass.xml
include/kafkalib/: kafka.hpp
site_scons/site_tools/: gdextension.py  scu.py
src/: Echo3D.cpp  Echo3D.h  example_class.cpp  example_class.h  kafka_multiplayer.h  kafka_multiplayer_peer.cpp  kafka_multiplayer_peer.h  register_types.cpp  register_types.h
src/godotkafka/: kafka_multiplayer.cpp  kafka_multiplayer.h  kafka_multiplayer_peer.cpp  kafka_multiplayer_peer.h  register_types.cpp  register_types.h
src/kafkalib/: kafka.cpp
src/test/: main.cpp
targets/: JetBrains.Rider.Cpp.targets  fix_mac_debug.sh
tools/: autogoc.cmake  autogoc.py
